# local-rust

./: .gitignore  Cargo.toml
ai/: Cargo.toml
ai/src/: lib.rs  main.rs  objects.rs  planer.rs  plot.rs  process.rs  settings.rs  vec2rad.rs
model/: Cargo.toml
model/src/: lib.rs  main.rs  mod.rs  model.rs
radio-recv/: Cargo.toml
radio-recv/src/: lib.rs  main.rs  packet.rs  radio.rs
speaker/: Cargo.toml  build.rs
speaker/src/: grSim_Commands.rs  grSim_Packet.rs  grSim_Replacement.rs  lib.rs  main.rs  mod.rs  speaker.rs
src/: lib.rs  main.rs  settings.rs
src/grsim/: grSim_Commands.rs  grSim_Packet.rs  grSim_Replacement.rs  mod.rs
vision/: .gitignore  Cargo.toml  build.rs
vision/src/: lib.rs  main.rs  mod.rs  vision.rs
