[package]
name = "local"
version = "0.1.0"
authors = ["teru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speaker={path="speaker"}
model={path="model"}
vision={path="vision"}
ai={path="ai"}
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
