[package]
name = "local"
version = "0.1.0"
authors = ["teru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=["speaker","model","ai","radio-recv"]
[dependencies]
speaker={path="speaker"}
model={path="model"}
vision={path="vision"}
ai={path="ai"}
radio-recv={path="radio-recv"}
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
