[package]
name = "ai"
version = "0.1.0"
authors = ["ninomiya5 <sawa1122.11221122@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model={path="../model"}
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
rand = "0.7.2"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
gnuplot = "0.0.32"
