[package]
name = "radio-recv"
version = "0.1.0"
authors = ["teru <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
log = "0.4.8"
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
