[package]
name = "vision"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.8.1"
[dependencies]
protobuf = "2.8.1"
glm = "0.2.3"
log = "0.4.8"
env_logger = "0.7.0"
serde = "1.0.101"
serde_derive = "1.0.101"
model={path="../model"}
